--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>BudgetIQ - Intelligent Personal Finance Management</title>
-    <meta name="description" content="Take control of your financial future with BudgetIQ's intelligent budgeting, goal tracking, and comprehensive reporting tools." />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BudgetIQ - Personal Finance Management</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-
   </body>
 </html>
